--- a/css/style.css
+++ b/css/style.css
@@ -76,8 +76,9 @@ h6 {
 }
 
 .navbar {
-    background-color: rgba(20, 2, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0);
     padding: .8rem 0;
+    transition: all .2s ease-in-out;
 }
 
 .navbar .navbar-nav .nav-link,
@@ -173,8 +174,8 @@ h6 {
 
 .close {
     position: absolute;
-    right: 0;
-    top: 0;
+    right: 10px;
+    top: 10px;
     z-index: 999;
     font-size: 2rem;
     font-weight: normal;
