--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,10 @@ h6 {
     font-weight: 600;
 }
 
+.section-gap {
+    padding: 120px 0;
+}
+
 .section-head {
     margin-bottom: 60px;
 }
@@ -98,6 +102,21 @@ h6 {
 
 .dropdown-menu {
     background-color: var(--primary-color);
+}
+
+.custom-toggler .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
+.navbar-dark .navbar-toggler {
+    border: none;
+}
+
+.navbar-toggler:focus,
+.navbar-toggler:active,
+.navbar-toggler-icon:focus {
+    outline: none;
+    box-shadow: none;
 }
 
 .caption {
@@ -218,7 +237,6 @@ h6 {
 ---------------------------*/
 .second-section {
     background-image: url(../images/menu-bg.jpg);
-    padding: 120px 0;
 }
 
 .second-section .card {
@@ -253,12 +271,18 @@ h6 {
 /*---------------------------
         third ssection
 ---------------------------*/
-.third-section {
-    padding: 120px 0;
+.gallery [class*="col-"] {
+    padding: 0;
 }
 
-.gallery [class*="col-"] {
-    padding: 20px 10px;
+.gallery .first-half [class*="col-"] {
+    padding-bottom: 20px;
+    padding-right: 20px;
+}
+
+.gallery .second-half [class*="col-"] {
+    padding-bottom: 25px;
+    padding-right: 20px;
 }
 
 .gallery img {
@@ -272,7 +296,6 @@ h6 {
 .fourth-section {
     background-color: var(--secondary-color);
     color: #fff;
-    padding: 120px 0;
 }
 
 .fourth-section h1::selection,
@@ -312,6 +335,115 @@ h6 {
     font-weight: 100;
 }
 
+/*---------------------------
+        fifth ssection
+---------------------------*/
+.blogs h4 {
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
+.blogs .date {
+    color: #222;
+    font-size: 14px;
+    font-weight: 500;
+}
+
+.blogs .blog-btn {
+    color: #222;
+    font-size: 12px;
+    font-weight: 500;
+    text-decoration: none;
+    margin: 20px 0;
+    display: inline-block;
+    border: 1px solid #eee;
+    border-radius: 20px;
+    padding: 4px 20px;
+    transition: all .3s ease 0s;
+}
+
+.blogs .blog-btn:hover {
+    color: #fff;
+    background-color: var(--secondary-color);
+    outline: none;
+}
+
+
+/*---------------------------
+        footer section
+---------------------------*/
+.footer {
+    color: #fff;
+    padding-top: 220px;
+    background: url(../images/footer-bg.jpg) center;
+    background-size: cover;
+}
+
+.footer h6 {
+    color: #fff;
+    margin-bottom: 25px;
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.footer .fa-heart {
+    color: var(--secondary-color);
+}
+
+.footer .copyright {
+    padding-top: 20px;
+}
+
+.newsletter .form-inline {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    padding-right: 2rem;
+}
+
+.newsletter .input-group input {
+    border: none;
+    width: 80% !important;
+    font-weight: 300;
+    background: #fff;
+    color: #777;
+    padding-left: 20px;
+    border-radius: 0;
+    font-size: 14px;
+    padding: 10px 18px;
+}
+
+.newsletter .form-control:focus {
+    color: #495057;
+    background-color: #fff;
+    border-color: #80bdff;
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgb(0 123 255 / 25%);
+}
+
+.newsletter .btn {
+    background: var(--secondary-color);
+    color: #fff;
+    border-radius: 0;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    padding: 8px 12px;
+    border: 0;
+}
+
+.footer .social-icons a {
+    padding-right: 25px;
+    transition: all .3s ease 0s;
+}
+
+.footer .social-icons i {
+    color: #ccc;
+    transition: all .3s ease 0s;
+}
+
+.footer .social-icons i:hover {
+    color: var(--secondary-color);
+}
 
 /*---------------------------
         media queries
@@ -332,8 +464,8 @@ h6 {
     }
 }
 
-/* @media only screen and (max-width: 991.99px) {
-    .container.open-hours {
-        display: none;
+@media only screen and (max-width: 767px) {
+    .navbar {
+        background-color: rgba(20, 2, 0, 0.8);
     }
-} */
+}
