--- a/css/style.css
+++ b/css/style.css
@@ -26,12 +26,12 @@ body {
     overflow-x: hidden;
 }
 
-.offset:before {
+/* .offset:before {
     height: 5.2rem;
     margin-top: -5.2rem;
     content: "";
     display: block;
-}
+} */
 
 ::selection {
     background-color: var(--secondary-color);
@@ -122,6 +122,10 @@ h6 {
     box-shadow: none;
 }
 
+.dropdown-menu.show {
+    display: inline-block;
+}
+
 .caption {
     padding: 0 1.1rem;
     margin-top: 150px;
@@ -170,10 +174,6 @@ h6 {
 /*---------------------------
         first section
 ---------------------------*/
-.first-section {
-    padding: 40px 0 100px;
-}
-
 .first-section .first-section-left {
     background: url(../images/video-bg.jpg) no-repeat center;
     background-size: cover;
@@ -196,8 +196,8 @@ h6 {
 
 .close {
     position: absolute;
-    right: 10px;
-    top: 10px;
+    right: 5px;
+    top: 8px;
     z-index: 999;
     font-size: 2rem;
     font-weight: normal;
